--- a/kanban/src/App.css
+++ b/kanban/src/App.css
@@ -393,6 +393,13 @@ body {
   float: right;
 }
 
+.page_loader {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 30px;
+}
+
 .subttl {
   color: #000;
   font-size: 14px;
@@ -939,7 +946,11 @@ body {
     justify-content: stretch;
     padding: 15px 13px 19px;
   }
-}
+
+    
+    
+  }
+
 @media screen and (max-width: 660px) {
   .pop-new-card {
     top: 70px;
