--- a/kanban/src/App.css
+++ b/kanban/src/App.css
@@ -83,7 +83,7 @@ body {
 } */
 
 .pop-user-set:target,
-.pop-exit:target,
+/* .pop-exit:target, */
 .pop-new-card:target,
 .pop-browse:target {
   display: block;
@@ -119,7 +119,7 @@ body {
   left: 0;
 }
 
-.pop-exit {
+/* .pop-exit {
   display: none;
   width: 100%;
   height: 100%;
@@ -129,8 +129,8 @@ body {
   top: 0;
   left: 0;
   z-index: 5;
-}
-.pop-exit__container {
+} */
+/* .pop-exit__container {
   width: 100%;
   height: 100%;
   min-height: 100vh;
@@ -140,8 +140,8 @@ body {
   align-items: center;
   justify-content: center;
   background: rgba(0, 0, 0, 0.4);
-}
-.pop-exit__block {
+} */
+/* .pop-exit__block {
   display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
@@ -151,16 +151,16 @@ body {
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
   box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13);
-}
-.pop-exit__ttl h2 {
+} */
+/* .pop-exit__ttl h2 {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: -0.4px;
   margin-bottom: 20px;
-}
-.pop-exit__exit-yes {
+} */
+/* .pop-exit__exit-yes {
   width: 153px;
   height: 30px;
   background-color: #565EEF;
@@ -176,16 +176,16 @@ body {
   letter-spacing: -0.14px;
   color: #FFFFFF;
   margin-right: 10px;
-}
-.pop-exit__exit-yes a {
+} */
+/* .pop-exit__exit-yes a {
   width: 100%;
   height: 100%;
   color: #FFFFFF;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.pop-exit__exit-no {
+} */
+/* .pop-exit__exit-no {
   width: 153px;
   height: 30px;
   background-color: transparent;
@@ -200,21 +200,21 @@ body {
   font-weight: 500;
   letter-spacing: -0.14px;
   color: #FFFFFF;
-}
-.pop-exit__exit-no a {
+} */
+/* .pop-exit__exit-no a {
   width: 100%;
   height: 100%;
   color: #565EEF;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.pop-exit__form-group {
+} */
+/* .pop-exit__form-group {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
+} */
 
 .pop-user-set__name {
   color: #000;
