--- a/kanban/src/App.css
+++ b/kanban/src/App.css
@@ -55,12 +55,12 @@ body {
   background-color: #F1F1F1;
 } */
 
-.container {
+/* .container {
   max-width: 1260px;
   width: 100%;
   margin: 0 auto;
   padding: 0 30px;
-}
+} */
 
 /* ._hover01:hover {
   background-color: #33399b;
@@ -720,16 +720,16 @@ body {
   display: none;
 }
 
-._dark {
+/* ._dark {
   display: none;
-}
+} */
 
-.header {
+/* .header {
   width: 100%;
   margin: 0 auto;
   background-color: #FFFFFF;
-}
-.header__block {
+} */
+/* .header__block {
   height: 70px;
   display: flex;
   flex-wrap: nowrap;
@@ -739,18 +739,18 @@ body {
   top: 0;
   left: 0;
   padding: 0 10px;
-}
-.header__logo img {
+} */
+/* .header__logo img {
   width: 85px;
-}
-.header__nav {
+} */
+/* .header__nav {
   max-width: 290px;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.header__btn-main-new {
+} */
+/* .header__btn-main-new {
   width: 178px;
   height: 30px;
   border-radius: 4px;
@@ -761,11 +761,11 @@ body {
   line-height: 1;
   font-weight: 500;
   margin-right: 20px;
-}
-.header__btn-main-new a {
+} */
+/* .header__btn-main-new a {
   color: #FFFFFF;
-}
-.header__user {
+} */
+/* .header__user {
   height: 20px;
   display: flex;
   flex-wrap: nowrap;
@@ -774,8 +774,8 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #565EEF;
-}
-.header__user::after {
+} */
+/* .header__user::after {
   content: "";
   display: block;
   width: 6px;
@@ -786,7 +786,7 @@ body {
   transform: rotate(-45deg);
   margin: -6px 0 0 5px;
   padding: 0;
-}
+} */
 /* .header__pop-user-set {
   display: block;
   position: absolute;
@@ -803,19 +803,19 @@ body {
   z-index: 2;
 } */
 
-.main {
+/* .main {
   width: 100%;
   background-color: #EAEEF6;
-}
-.main__block {
+} */
+/* .main__block {
   width: 100%;
   margin: 0 auto;
   padding: 25px 0 49px;
-}
-.main__content {
+} */
+/* .main__content {
   width: 100%;
   display: flex;
-}
+} */
 .main__column {
   width: 20%;
   margin: 0 auto;
